<?xml version="1.0"?>
<package format="3">
  <name>imu_integrator</name>
  <version>0.0.0</version>
  <description>The Imu_Integrator package</description>

  <maintainer email="abekabe@todo.todo">abekabe</maintainer>

  <license>BSD2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
